<resources>
    <string name="app_name">Naoto exercise</string>
    <string name="title_activity_exercise_swipe_view">ExerciseSwipeViewActivity</string>
    <string name="content_authority">com.project.capstone_stage2.app.provider</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exercise_detail">ExerciseDetailActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add Exercise Widget</string>
    <string name="exercise_option_title">Please select a exercise category</string>
    <string name="share_exercise_sendTo">Send To</string>
    <string name="share_exercise_title">Share our exercise</string>
    <!-- default strings -->
    <string name="default_category_name">Category Name</string>
    <string name="default_category_desc">Category Desc</string>
    <!-- Tab's name -->
    <string name="all_exercise">All</string>
    <string name="favorite_exercise">Favorite</string>
    <!-- button strings -->
    <string name="btn_share">Share</string>
    <string name="btn_addFavorite">Add to favorite</string>
    <string name="btn_removeFavorite">Remove favorite</string>

    <!-- Error Message String -->
    <string name="error_no_exercise">No Excercise!</string>
    <string name="error_no_video">No video for this exercise!</string>
    <string name="detailview_placeholderStr">Please select an exercise to get start!</string>
    <string name="ad_unit_id">ca-app-pub-3160158119336562/6706245862</string>
    <string name="title_activity_widget_config">WidgetConfigActivity</string>
    <string name="widget_no_data">No Exercise Data</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="invalid_video_url">No exercise video!</string>
    <string name="invalid_image_url">No exercise image!</string>
    <string name="share_error">"Sorry, unable to share exercise!"</string>

    <!-- Content description String -->
    <string name="content_exerciseImage">Selected Exercise Image</string>
    <string name="content_exerciseVideo">Selected Exercise Video</string>
    <string name="content_shareButton">Share Exercise</string>
    <string name="content_removeExerciseButton">Remove Exercise</string>
    <string name="content_addExerciseButton">Add Exercise</string>
    <string name="content_exercise_category">Exericse Category Image</string>
    <string name="content_detailview_exercise_video">Youtube Exericse Video</string>

    <string name="youtube_url">https://www.youtube.com/watch?v=</string>

    <!-- Toast message -->
    <string name="toast_share_exercise">Share Exercise!</string>
    <string name="toast_add_exercise">Exercise is added as favorite!</string>
    <string name ="toast_share_error">Error occurs: unable to share!</string>

    <!--Preferences Strings -->
    <string name="pref_key_reminder" translatable="false">exercise_reminder</string>
    <string name="pref_key_time" translatable="false">exercise_time</string>
    <string name="pref_reminder_title">Exercise Reminder</string>
    <string name="pref_settime_title">Exercise Time</string>
    <string name="title_activity_preference">Preference Activity</string>
    <string name="pref_reminder_summary">Set Exercise Reminder to do exercise</string>
    <string name="pref_settime_summary">Set the time to trigger the reminder to do exercise</string>

    <!-- menu -->
    <string name="action_setting">Setting</string>

    <!-- notification title -->
    <string name="notification_title">Exercise Reminder</string>
    <string name="notification_context">Click here to start your exercise!</string>

    <!-- Naoto Exercise firebase project url -->
    <string name="firebaseproject">https://naotoexercise.firebaseio.com/</string>
    <string name="firebaseDbRefJson">exercises.json</string>


</resources>
