<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:tools="http://schemas.android.com/tools"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/exercise_card_view"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginEnd="8dp"
android:layout_marginStart="8dp"
android:layout_marginTop="8dp"
card_view:cardCornerRadius="4dp"
card_view:cardElevation="@dimen/cardview_default_elevation"
card_view:cardUseCompatPadding="true"
card_view:cardPreventCornerOverlap="true">

<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/default_category_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/content_text_color"
        android:textSize="22dp" />

    <ImageView
        android:id="@+id/exercise_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/exercise_desc"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_name"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/content_shareButton"
        android:nextFocusDown="@id/share_btn"/>

    <TextView
        android:id="@+id/exercise_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8dp"
        android:layout_margin="16dp"
        android:text="@string/default_category_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/content_text_color"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_image"
       />

    <!-- TODO example -->
    //https://medium.com/@eugenebrusov/using-of-constraintlayout-to-build-out-cardview-with-material-design-e111e64575c2

    <Button
        android:id="@+id/share_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:minWidth="0dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/btn_share"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_desc"
        android:contentDescription="@string/content_shareButton"
        android:nextFocusRight="@id/add_fav_btn"
        android:nextFocusUp="@id/exercise_image"/>

    <Button
        android:id="@+id/remove_fav_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/btn_removeFavorite"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@+id/share_btn"
        app:layout_constraintTop_toTopOf="@+id/share_btn"
        android:contentDescription="@string/content_removeExerciseButton"
        android:nextFocusLeft="@id/share_btn"
        android:nextFocusUp="@id/exercise_image"
        />

</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
