<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.project.capstone_stage2.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/exercise_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardUseCompatPadding="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        >

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/exercise_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/default_category_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:gravity="center"
                android:textColor="@color/content_text_color"
                android:textSize="22dp"
                android:padding="16dp"
                />
            <ImageView
                android:id="@+id/exercise_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitStart"
                android:layout_gravity="center"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/exercise_desc"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <TextView
                android:id="@+id/exercise_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:text="@string/default_category_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/content_text_color"
                android:gravity="center"
                android:textSize="18dp"
                android:padding="16dp"
                android:lineSpacingExtra="8dp"
                app:layout_constraintTop_toBottomOf="@+id/exercise_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <!-- TODO:Add back the proper image view png, vector? -->
            // https://medium.com/@eugenebrusov/using-of-constraintlayout-to-build-out-cardview-with-material-design-e111e64575c2

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/btn_share"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/exercise_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/add_fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/btn_addFavorite"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="@+id/share_btn"
                app:layout_constraintStart_toEndOf="@+id/share_btn" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>




</ScrollView>